# D.3.1_ThematicAnalysis

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/aiThematicAnalysis/: __main__.py  docx_processor.py  questions.yml
